--- a/src/main/webapp/relatorio_checkout.xhtml
+++ b/src/main/webapp/relatorio_checkout.xhtml
@@ -7,8 +7,8 @@
     <ui:define name="content">
         <h2 class="page-header">Relatório Check out</h2>
         <br/>
-        <center>
-            <h:form>
+
+            <h:form align="center">
                 <p:messages id="messages" showDetail="true" closable="true" />
                 <h:panelGrid columns="2" cellpadding="10">
                     <h:outputLabel value="Número da Reserva:" styleClass="panelGridLabel" />
@@ -58,6 +58,6 @@
 
                 </h:panelGrid>
             </h:form>
-        </center>
+
     </ui:define>
 </ui:composition>
