--- a/src/main/webapp/relatorio_usuario.xhtml
+++ b/src/main/webapp/relatorio_usuario.xhtml
@@ -7,8 +7,8 @@
     <ui:define name="content">
         <h2 class="page-header">Consulta do Usuário</h2>
         <br/>
-        <center>
-            <h:form>
+
+            <h:form align="center">
                 <h:panelGrid columns="2" cellpadding="10">
                     <h:outputLabel value="Código:" styleClass="panelGridLabel" />
                     <h:outputText value="#{consultaUsuariosBean.usuarios.codUsuario}" />
@@ -49,12 +49,12 @@
 
                         </p:column>
 
-                        <p:column headerText="Data Saída" sortBy="#{lista.dataSaida}" filterBy="#{lista.dataSaida}">
-                            <center>
+                        <p:column align="center" headerText="Data Saída" sortBy="#{lista.dataSaida}" filterBy="#{lista.dataSaida}">
+
                                 <h:outputText value="#{lista.dataSaida}" >
                                     <f:convertDateTime pattern="dd/MM/yyyy" />
                                 </h:outputText>
-                            </center>
+
                         </p:column>
                         <p:column headerText="Número de Hospedes" sortBy="#{lista.numeroHospedes}" filterBy="#{lista.numeroHospedes}">
 
@@ -87,6 +87,6 @@
 
                 </h:panelGrid>
             </h:form>
-        </center>
+
     </ui:define>
 </ui:composition>
